<resources>
    <string name="app_name">Done Timer</string>
    <string name="task_label">Task</string>
    <string name="work_label">Work Session</string>
    <string name="short_break">Short Break</string>
    <string name="long_break">Long Break</string>
    <string name="Start_Button">Start</string>
    <string name="Stop_Button">Stop</string>
    <string name="Reset_Button">Reset</string>
    <string name="new_task">New Task</string>
    <string name="show_subtitle">Show Subtitles</string>
    <string name="hide_subtitle">Hide Subtitles</string>
    <string name="subtitle_format">%1$d Tasks</string>
    <string name="done_label">Done </string>
</resources>
