<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/task_title"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:text="@string/task_label"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/work_session_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_label" />

        <Button
            android:id="@+id/short_break_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/short_break" />

        <Button
            android:id="@+id/long_break_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/long_break" />

    </LinearLayout>

    <TextView
        android:id="@+id/timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="00:00"
        android:textSize="80sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Start_Button" />

        <Button
            android:id="@+id/stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Stop_Button" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Reset_Button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done_label"
            android:layout_gravity="center_vertical"/>

        <CheckBox
            android:id="@+id/task_finished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

    <!--<android.support.v7.widget.RecyclerView-->
        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:id="@+id/task_recycler_view"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent" />-->

</LinearLayout>